--- a/http-server/package.json
+++ b/http-server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "minimist": "^1.2.8"
   }
 }
