--- a/http-server/package.json
+++ b/http-server/package.json
@@ -7,7 +7,7 @@
   
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "yugeshwar",
   "license": "ISC",
   "dependencies": {
     "eslint": "^8.55.0",
