--- a/http-server/package.json
+++ b/http-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "http-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "\"My http server application\"",
   "main": "index.js",
   "scripts": {
   
